fixed dark mode

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -6,4 +6,17 @@
 
 :root {
 	font-family: 'Space Mono', monospace;
+	--bg-main: 255 255 255;
+	--bg-card: 255 255 255;
+	--text-main: 20 29 47;
+	--text-secondary: 107 114 128;
+	--border: 229 231 235;
+}
+
+.dark {
+	--bg-main: 20 29 47;
+	--bg-card: 30 42 71;
+	--text-main: 255 255 255;
+	--text-secondary: 144 164 212;
+	--border: 20 29 47;
 }
